Cleanup from removing photo-uploader from articles

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,11 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+*.*~
 
 # Ignore uploaded photos
 public/uploads
+
+# Ignore netbeans files
+nbproject/
+
